--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@ipbyrne/mongo-encrypted-query",
     "private": true,
-    "author": "gjgd (https://github.com/gjgd)",
+    "author": "Isaac Byrne",
     "module": "dist/index.esm.js",
     "version": "0.0.1",
     "main": "dist/index.js",
