--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedParameters": false,
     "outDir": "dist",
     "resolveJsonModule": true,
-    "rootDir": "./src",
+    "rootDir": "./",
     "skipLibCheck": true,
     "sourceMap": true,
     "inlineSources": true,
@@ -28,6 +28,6 @@
     "strict": true,
     "target": "ES6"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "testing/**/*"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
