--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+    - name: Use Node 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.12.0
     - name: Install
       run: npm i
     - name: Lint
